# NMRTrans

./: .gitignore  LICENSE  README.md  model_ylj.py  nmr_main.py  pyproject.toml  verify_nmrmind.py  vocab.json  vocab_nmrmind.json
configs/: config.yaml  experiment_c.yaml  experiment_c_formula.yaml  experiment_c_h.yaml  experiment_c_h_formula.yaml  experiment_h.yaml  experiment_h_formula.yaml
scripts/: check_data.py  rjob.sh  rjob_mas.sh  start_test.sh  start_training.sh
src/: callbacks.py  config.py  config_local.py  config_local.py.example  data.py  features.py  model.py  model_bak.py  model_new.py  runtime.py  test.py  tokenizer.py  tokenizer_nmrmind.py  train.py
src/models/: data.py  model.py  train.py
tests/: test_callbacks.py  test_config_loading.py  test_eval_config.py  test_features.py  test_runtime_config.py
