[project]
name = "nmrtrans"
version = "0.1.0"
description = "NMRTrans training and inference for NMR spectra to SMILES generation."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "hydra-core>=1.3.2,<2",
    "lightning>=2.2,<2.6",
    "lz4>=4.3.3,<5",
    "numpy>=1.26,<3",
    "pytorch-lightning>=2.2,<2.6",
    "rdkit>=2023.9.6",
    "swanlab>=0.5",
    "torch>=2.2,<2.7",
    "tqdm>=4.66,<5",
    "transformers>=4.40,<5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"
